--- a/doc/memoria.tex
+++ b/doc/memoria.tex
@@ -3,6 +3,7 @@
 
 \usepackage[spanish,es-tabla]{babel}
 \usepackage[utf8x]{inputenc}
+\usepackage{mathtools}
 \usepackage{microtype}
 \usepackage{emptypage}
 \usepackage{usmtesis}
