--- a/doc/3_Desarrollo.tex
+++ b/doc/3_Desarrollo.tex
@@ -88,7 +88,7 @@ Para la construcción del histograma se divide el rango de datos que va de 0 a $
 Para la aproximación inicial de los parámetros de la \emph{mixture von mises distribution} se utiliza una estimación numérica basada en los datos recolectados acerca de la dirección del viento.\\
 Sea $j \in \{1 ... k\}$ el subíndice del sector representado por la $j$-ésima función de von Mises.\\
 La dirección del viento predominante $\mu_j$ se estima de la siguiente forma:
-\begin{align}
+\begin{align}\label{eq:Prevailing_Param}
     \mu_j &= 
         \left\{
             \begin{array}{ll}
@@ -103,7 +103,7 @@ La dirección del viento predominante $\mu_j$ se estima de la siguiente forma:
 \end{align}
 En donde $s_j$ y $c_j$ representan el seno y coseno promedio del sector $j$.\\
 Tradicionalmente, se estima el parámetro de concentración $k_j$ con la ecuación:
-\begin{align}\label{eq:ImplicitK}
+\begin{align}\label{eq:Implicit_Param}
     \frac{I_1(k_j)}{I_0(k_j)} = \sqrt{s_j^2 + c_j^2}
 \end{align}
 Donde $I_1(k_j)$ es la función modificada de Bessel de primera clase y orden 1.
@@ -112,14 +112,14 @@ Para evitar la resolución de la ecuación implícita \ref{eq:ImplicitK} se util
     |k_j| = \{23.29041409 - 16.8617370\sqrt[4]{s_j^2 + c_j^2}\} 
 \end{align}
 Los pesos iniciales $w_j$ son aproximados como: \\
-\begin{align}
+\begin{align}\label{eq:Weight_Param}
     w_j = \frac{\sum_{i=J_l}^{J_u} O_i}{\sum_{i=1}^{T} O_i}
 \end{align}
 
 Donde $J_l$ y $J_u$ son los índices de los bordes del sector $j$.\\
 Esta estimación inicial de los parámetros de la \emph{mixture von mises distribution} es mejorada mediante la meta-heurística \emph{Particle Swarm Optimization}. Para el PSO se utiliza la representación descrita en \ref{eq:PSO} y la modificación a este sugerida en Carneiro et al. \cite{Carneiro15} descrita previamente en \ref{eq:VariationParameters}.\\
 La función objetivo para el PSO es el test estadístico $\chi^2$ descrito en \cite{Heckenbergerova15} como sigue a continuación:
-\begin{align}
+\begin{align}\label{eq:FO_Direction}
     \chi^2 = \sum_{i=1}^{T}\frac{(O_i - np_{i})^2}{np_i}
 \end{align}
 Donde $T$ es el número de clases de frecuencia definido para construir el histograma, $n$ es la suma de las frecuencias observadas $O_i$ y $p_i$ es la probabilidad teórica de cada clase de frecuencia predicha por el modelo ajustado.\\
@@ -129,26 +129,32 @@ Para el cálculo del $p_i$ se utiliza:
 \end{align}
 Donde $u_i$ y $l_i$ son los bordes de la $i$-ésima clase de frecuencia.\\
 La forma de la solución a encontrar es descrita en \ref{eq:sol_pso}. Esta es restringida por la condición para los pesos de la \emph{mixture von mises distribution}, la cual obliga a que se deba cumplir que la suma de los pesos sea igual a 1, como se describe en \ref{eq:WeightConstraint}.
-\subsection{Representación}
+\subsection{Representación}\label{sec:Representacion}
 La representación del PSO es similar al utilizado para el ajuste de la distribución de datos de velocidad del viento. Las partículas y el enjambre están representados por \ref{rep:Particle} y \ref{rep:Swarm} respectivamente.\\
 La solución para el PSO que mejora la estimación inicial de los parámetros para la \emph{mixture von Mises distribution} está representado por un vector $v$ en el cual se encuentran los valores para todos los parámetros de cada \emph{simple von Mises distribution}. Estos valores están codificados para que el algoritmo se mueve en el rango desde 0 a 1.\\
 El vector solución tiene la forma:
 \begin{align}
     v = (\overbrace{v_1,...,v_k}^{\mu},\overbrace{v_{k+1},...,v_{2k}}^{k},\overbrace{v_{2k+1},...,v_{n}}^{w}).
 \end{align}
-En donde $\mu$ está representado en el rango $i \in \{1,...,k\}$ y para ser decodificado debe ser escalado por $2\pi$.
-
-
-*Representación restricción
-
+El parámetro $\mu$ está representado en el rango $i \in \{1,...,k\}$ y para ser decodificado debe ser escalado por $2\pi$.\\
+El parámetro $k$ está representado en el rango $i \in \{k+1,...,2k\}$ y para ser decodificado debe ser escalado por $[0, 700]]$.\\
+El parámetro $w_j$ está representado en el rango $i \in \{2k+1,...,n\}$ cuyos valores van en el rango $[0,1]$.
 
 \subsection{Descripción del algoritmo}
-El ajuste de la función de densidad de probabilidad para la dirección del viento se basa en el trabajo propuesto por Heckenbergerova \cite{Heckenbergerova15}.\\ 
-Consiste en dos fases. La primera, una aproximación basada en la estimación numérica de los parámetros requeridos para la \emph{mixture of von Mises distribution} a través de operaciones simples con los datos recolectados, y la segunda, una mejora de la solución inicial obtenida en la fase anterior mediante el uso de la meta-heurística \emph{Particle Swarm Optimization}. \\
-
-* Hablar del ajuste de parámetros. (iteraciones, la partición de clases,  )
-* Hablar de la aproximación inicial
-* Esquema algoritmico.
-* Decodificación y resultado
+El algoritmo para el ajuste de la función de densidad de probabilidad para la dirección del viento se basa en la propuesta de Heckenbergerova et al. \cite{Heckenbergerova15}.\\ 
+Como se ha ido vislumbrado, consiste en dos fases. La primera, una aproximación basada en la estimación numérica de los parámetros requeridos para la \emph{mixture of von Mises distribution} a través de operaciones simples con los datos recolectados, y la segunda, una mejora de la solución inicial obtenida en la fase anterior mediante el uso de la meta-heurística \emph{Particle Swarm Optimization}. \\
+A continuación se describe el algoritmo para la aproximación inicial de la solución.
+\input{code/initial_direction}
+En donde la estimación de los parámetros se realiza como se describe en \ref{eq:Prevailing_Param} para los $\mu_j$, \ref{eq:Implicit_Param} para los $k_j$ y \ref{eq:Weight_Param} para los pesos $w_j$.
+Una vez obtenida la aproximación inicial se procede a mejorar esta mediante el uso del PSO.
+\input{code/pso_direction}
+El algoritmo es bastante similar en estructura al desarrollado para la dirección del viento \ref{alg:pso}. Sin embargo,
+existen diferencias importantes, relevantes al problema actual que se destacarán a continuación.\\
+Para la inicialización de las partículas, se realizaron pequeñas perturbaciones a la solución inicial tal y como se sugiere en Heckenbergerova et al. \cite{Heckenbergerova15}. Esto evita que la solución escape a zonas que tengan un buen resultado en la función objetivo, pero que la forma escape a la del histograma. Debido a que la función objetivo definida \ref{eq:FO_Direction} mide las diferencias de frecuencias entre los datos reales y los teóricos, es decir, las áreas de las barras del histograma de densidad versus el área bajo la curva de la distribución de probabilidad en algún intervalo, más de una forma de la curva podría parecer una buena solución. (referencia imágen) Por ello, la idea es mantener la forma inicial encontrada, mejorándola sin deformarla. Así, las perturbaciones iniciales a los valores entre 0 y 1  de las posiciones de las partículas eran del orden de $~ 10^{-3}$.\\
+La forma en que se cuidaron las condiciones de borde consistieron en limitar el avance de las partículas a los bordes 0 y 1 manteniéndolos en dichos valores si es que se excedían a ellos.\\
+Para cuidar la restricción de pesos se normalizaran los valores determinados en cada iteración, es decir, se suman todos los valores $w_j$ y se ponderan dichos valores por el recíproco de la suma obtenida.\\
+Debido a que la función objetivo implica determinar la frecuencia teórica, es necesario determinar la probabilidad
+de cierto rango de direcciones mediante el cálculo del área bajo la curva de la distribución de densidad de probabilidad para luego ser multiplicada por la suma del total de datos y así obtener el valor requerido. Por ende, para el cálculo de la integral se utilizaron sumas de Riemann con una partición conveniente al desempeño del algoritmo y la precisión requerida.\\
+Finalmente, la solución obtenida es decodificada tal y como se explica en la sección anterior \ref{sec:Representacion}.
 \subsection{Experimentos}
 * Test estadisticos y gráficoss
