--- a/doc/bibliography/bibliography.bib
+++ b/doc/bibliography/bibliography.bib
@@ -70,3 +70,9 @@
     publisher={Elsevier Ltd},
     year={2015}
 }
+@article{Carta07,
+    author={Carta, José A. and Bueno, Celia and Ramírez, Penélope},
+    title={Statistical modelling of directional wind speeds using mixtures of von Mises distribution: Case study},
+    publisher={Elsevier Ltd},
+    year={2007}
+}
