--- a/doc/memoria.tex
+++ b/doc/memoria.tex
@@ -11,14 +11,17 @@
 \usepackage{caption}
 \usepackage{amsmath}
 \usepackage{listings}
-%\usepackage{graphicx}
-\usepackage{subcaption}
+\usepackage{graphicx}
+\usepackage{subfigure}
+%\usepackage{subcaption}
 \usepackage{cite}
 \usepackage{rotating}
 \usepackage{amsfonts}
 \usepackage{hyperref}
 \usepackage{algorithm}
 \usepackage{algorithmic}
+\usepackage{float}
+\usepackage{comment}
 
 \usepackage{tikz}
 \usetikzlibrary{babel,arrows.meta,shapes,arrows}
